--- a/styles/main.less
+++ b/styles/main.less
@@ -133,6 +133,12 @@ i {
 	&.fa-location:before {
 	  content: "\f041";
 	}
+	&.fa-education:before {
+	  content: "\f19d";
+	}
+	&.fa-star:before {
+	  content: "\f005";
+	}
 	&.fa-resume:before {
 	  content: "\f15c";
 	}
