--- a/styles/main.less
+++ b/styles/main.less
@@ -405,6 +405,7 @@ nav#main-nav {
 		img {
 			display: block;
 			margin: 0 auto 25px auto;
+			max-width: 415px;
 		}
 		h1 {
 			font-family: 'passionone',sans-serif;
@@ -699,9 +700,13 @@ nav#main-nav {
 	header {
 		background-color: @blue-darker;
 		.image {
+			float: left;
+			margin-left: -40px;
+			text-align: center;
+			width: 210px;
 			img {
-				float: left;
-				margin: -15px 40px -15px 0;
+				margin: -15px 0;
+				max-width: 130px;
 				.border-radius(50%);
 			}
 		}
