--- a/styles/main.css
+++ b/styles/main.css
@@ -782,7 +782,7 @@ nav#main-nav ul li a:hover {
 }
 .resume header .contact a {
   background-color: #26264c;
-  color: #47478e;
+  color: #4d4d9c;
   display: block;
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 13px;
